@@ -1,3 +1,8 @@
+2006-05-11  Thiemo Seufer  <ths@mips.com>
+
+	* gas/mips/jal-range.l: Don't check the range of j or jal
+	addresses.
+
 2006-05-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/i386/x86-64-gidt.d: Adjusted.
